test/e2e/dubbo/testdata/virtualservice-method-regex.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-dubbo-route
spec:
  hosts:
    - org.apache.dubbo.samples.basic.api.demoservice
  http:
    - name: "reviews-v1-routes"
      match:
        - method:
            regex: sayHello01
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v1
    - name: "reviews-v2-routes"
      match:
        - method:
            regex: ^s.*o$
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v2
