test/e2e/dubbo/testdata/virtualservice-v2.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-dubbo-route
spec:
  hosts:
    - org.apache.dubbo.samples.basic.api.demoservice
  http:
    - name: "v2-routes"
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v2
